--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,21 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_home">Hire Us | Home</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <string name="str_all_selected">All Categories</string>
+
+    <string-array name="categories">
+        <item>All Categories</item>
+        <item>Models/Brand Ambassadors</item>
+        <item>Movie/TV Talents</item>
+        <item>Singer/Band</item>
+        <item>Dancer</item>
+        <item>Emcee/Host</item>
+        <item>Comedians</item>
+        <item>Disk Jockey (DJ)</item>
+    </string-array>
 </resources>
