Dynamic changing of profile page based on category. Data shown is now based on database record. Change 'Add to Booking List' to 'Inquire Now' if category is celebrity. Redesign profile page. Added celebrity category. Changed filtering alphabetically..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,12 +31,13 @@
     <string name="str_all_selected">All Categories</string>
 
     <string-array name="categories">
+        <item>Celebrity</item>
+        <item>Comedians</item>
+        <item>Dancer</item>
+        <item>Disk Jockey (DJ)</item>
+        <item>Emcee/Host</item>
         <item>Models/Brand Ambassadors</item>
         <item>Movie/TV Talents</item>
         <item>Singer/Band</item>
-        <item>Dancer</item>
-        <item>Emcee/Host</item>
-        <item>Comedians</item>
-        <item>Disk Jockey (DJ)</item>
     </string-array>
 </resources>
