--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_booking_list">Booking List</string>
 
     <string name="str_all_selected">All Categories</string>
 
@@ -40,4 +42,5 @@
         <item>Movie/TV Talents</item>
         <item>Singer/Band</item>
     </string-array>
+    <string name="title_activity_filtering">FilteringActivity</string>
 </resources>
