Redesign homepage (added side drawer navigation). Implement login/logout functionality to app with session. Dynamic navigation menu based on user role. Added maxlength for login inputs. Added EZDialog library.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
         <item>Singer/Band</item>
     </string-array>
     <string name="title_activity_filtering">FilteringActivity</string>
+    <string name="title_activity_main">Home | Hire Us</string>
 </resources>
