Added checkout page. Integrate bundle to app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="title_activity_booking_list">Booking List</string>
     <string name="title_activity_booking_date_and_time">Booking Details</string>
     <string name="title_activity_checkout">Checkout</string>
+    <string name="title_activity_payment">Payment</string>
 
     <string name="str_all_selected">All Categories</string>
 
