--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_booking_list">Booking List</string>
+    <string name="title_activity_clients_booked">Clients Booked</string>
     <string name="title_activity_booking_date_and_time">Booking Details</string>
     <string name="title_activity_checkout">Checkout</string>
     <string name="title_activity_payment">Payment</string>
