--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_booking_list">Booking List</string>
     <string name="title_activity_clients_booked">Clients Booked</string>
+    <string name="title_activity_talents">Talents</string>
+    <string name="title_activity_announcements">Announcements</string>
+    <string name="title_activity_news">News &amp; Updates</string>
     <string name="title_activity_booking_date_and_time">Booking Details</string>
     <string name="title_activity_checkout">Checkout</string>
     <string name="title_activity_payment">Payment</string>
